test/Fail/Issue2386-b.err
Issue2386-b.agda:7.1-28: error: [GenericError]
Wrong type of constructor of BUILTIN EQUALITY
when checking the pragma BUILTIN EQUALITY Eq
